plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    apply plugin: 'java'
    group = 'com.example'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
    bootJar {
        enabled = false
    }

    jar {
        enabled = true
    }

}

subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'


    group = 'com.example'
    version = '0.0.1-SNAPSHOT'

    sourceCompatibility = '17'
    bootJar {
        enabled = false
    }

    jar {
        enabled = true
    }
    repositories {
        mavenCentral()
    }
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {

        compileOnly 'org.projectlombok:lombok'

        //developmentOnly 'org.springframework.boot:spring-boot-devtools'

        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'

    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
